--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+select option:disabled {
+    color: rgba(0, 0, 0, 0.95);
+    font-weight: bold;
+    text-align: center;
+}
+
 table {
     border-collapse: collapse;
 }
