added placeholder for stat cost and bonus

--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,10 @@ select option:disabled {
 
 .grid-item {
     border: 1px solid black;
+    display: flex;
     padding: 2px;
+}
+
+.item-text {
+    padding-left: 3px;
 }
