improved responsive design for background and calculator

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,10 @@
 }
 
 body {
-    background-color: darkgray;
-    background-image: url("background.png");
-    background-position: 40% 18%;
-    background-repeat: no-repeat;
+    background-color: #e4dcd3;
     color: white;
     font-family: Verdana, Arial, Helvetica, sans-serif;
+    margin: 0px;
 }
 
 input[type="number"] {
@@ -22,11 +20,21 @@ select option:disabled {
     text-align: center;
 }
 
+.art {
+    background-color: #e4dcd3;
+    background-image: url("background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
 .content {
     background-color: gray;
     left: 5%;
     position: absolute;
-    top: 35%;
+    top: calc(50% - 100px);
     width: 675px;
 }
 
